[PN-8576] Changed TransationWriter with BatchWriter. Some Fixes and refactoring